@@ -9,6 +9,7 @@
 BIN=./bin
 TEXT=./text
 DATA=./data
+#LOGDIR=.
 GAMENAME=netmux
 OWNER=mux_admin@your_site.your_domain
 #
